--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,12 +19,9 @@ dependencies:
     sdk: flutter
   package_info_plus: ^1.3.0  
   silent_update:
-    # When depending on this package from a real application you should use:
-    #   silent_update: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    path: ../
+    git:
+      url: https://github.com/DarthSid12/silent-update.git
+      ref: main
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
